--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 Revision history for Perl module Archive::Extract::Libarchive:
 
-0.36
+0.36 Sat Oct 29 07:53:55 BST 2011
      - fix code in synopsis (patch by Gisle Aas)
 
 0.35 Sat Oct 22 13:35:19 BST 2011
