expand the test suite

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Revision history for Perl module Archive::Extract::Libarchive:
 
+0.37
+     - expand the test suite
+
 0.36 Sat Oct 29 07:53:55 BST 2011
      - fix code in synopsis (patch by Gisle Aas)
 
