--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 Revision history for Perl module Archive::Extract::Libarchive:
 
-0.37
+0.37 Sun Oct 30 09:01:50 GMT 2011
      - expand the test suite
 
 0.36 Sat Oct 29 07:53:55 BST 2011
